force-app/main/default/objects/Customer_Verification_Log__c/Customer_Verification_Log__c.object-meta.xml
<CustomObject>
    <label>Customer Verification Log</label>
    <nameField>
        <displayFormat>CVL - {0000}</displayFormat>
        <label>Customer Verification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Verification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>