force-app/main/default/objects/Customer_Verification_Log__c/fields/Actual_Answer__c.field-meta.xml
<CustomField>
    <fullName>Actual_Answer__c</fullName>
    <label>Actual Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>