force-app/main/default/objects/Customer_Verification_Log__c/fields/Customer_Verification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Verification</label>
    <referenceTo>Customer_Verification__c</referenceTo>
    <relationshipLabel>Customer Verification Logs</relationshipLabel>
    <relationshipName>Customer_Verification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>