force-app/main/default/objects/Customer_Verification_Log__c/fields/Expected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Expected_Answer__c</fullName>
    <label>Expected Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>