force-app/main/default/objects/Customer_Verification_Log__c/fields/Is_valid_Answer__c.field-meta.xml
<CustomField>
    <fullName>Is_valid_Answer__c</fullName>
    <label>Is valid Answer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>